--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
+streamlit
 pandas
 numpy
-scikit-learn
-joblib
-streamlit
-matplotlib
 seaborn
-# Optional:
-# shap
-# fpdf
+matplotlib
+scikit-learn
+reportlab
